<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:padding="16dp">



    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_often_do_you_take_this_medication"
        android:textColor="?attr/colorOnSurface"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <RadioGroup
        android:checkedButton="@+id/enabled_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/enabled_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:text="@string/once_daily"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/twice_daily"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="Weekly"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="Cyclic"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/on_demand"/>




    </RadioGroup>


    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueMedicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueSignUp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp" />
</LinearLayout>