<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="20dp"
    android:background="@color/test"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100sp"
        android:text="@string/mobile_health"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint2"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/username_hint"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="text"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:hint="@string/confirm_password_hint"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darker_green_primary_button"
        android:text="@string/sign_up"
        android:contentDescription="@string/sign_up_button_desc"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/already_has_an_account"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/white"
        android:contentDescription="@string/return_to_login_screen_description"
        android:paddingTop="10sp"
        android:text="@string/already_have_account" />
</LinearLayout>
