<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="?attr/colorSurface"
    tools:ignore="VisualLintBounds">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="200sp"
        android:text="@string/mobile_health"
        android:textColor="?attr/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        app:startIconDrawable="@drawable/baseline_email_24">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darker_green_primary_button"
        android:text="@string/reset_password_txt"
        android:contentDescription="@string/reset_password_txt"
        android:textColor="@color/white"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="50sp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_back_button"
        android:layout_width="170dp"
        android:layout_marginTop="25sp"
        android:contentDescription="@string/exit_forgot_password_description"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/go_back_txt"
        android:textColor="@color/white" />


</LinearLayout>
