<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/adherence_title"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/daily_adherence_rate"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/adherence_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/daily_adherence_rate_chart_desc"
            app:layout_constraintTop_toBottomOf="@id/adherence_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/weekly_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication_taken_by_weekday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/adherence_chart"
            app:layout_constraintStart_toStartOf="parent" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/weekly_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/weekly_adherence_rate_chart_desc"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/weekly_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/daily_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_day_distribution"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/weekly_chart"
            app:layout_constraintStart_toStartOf="parent" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/daily_timing_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/time_of_day_adherence_rate_chart_desc"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/daily_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>